--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,7 +158,7 @@ html {
   border-radius: var(--border-radius);
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
   margin-bottom: 2rem;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .destacados h2 {
@@ -575,4 +575,10 @@ html {
   border-radius: var(--border-radius);
   padding: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+}
+.seccion h2 {
+  color: var(--primary);
+  margin-bottom: 1rem;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+  font-size: 1.5rem;
 }
